# laclib

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FindMKL.cmake  FindMUMPS.cmake  README.md  all-bench.bash  all.bash  bench.bash  bmark-sparse-mpi.bash  bmark-sparse.bash  build-docker-image.bash  install-all-open.bash  install-deps.bash  install.bash  run-bmarks-sparse-analysis.bash  run-bmarks-sparse-multi.bash  uninstall.bash  valgrind.supp
benchmarks/coo-to-csr/: CMakeLists.txt  main.cpp
benchmarks/coo-to-csr/results/: local_Flan_1565_omp1.json  local_Flan_1565_omp2.json  local_Flan_1565_omp3.json  local_Flan_1565_omp4.json  mkl_Flan_1565_omp1.json  mkl_Flan_1565_omp2.json  mkl_Flan_1565_omp3.json  mkl_Flan_1565_omp4.json
benchmarks/sparse-solver/: CMakeLists.txt  README-open_intel_all_fact.md  README-open_mpi1_omp_fact_problem.md  README-open_seq_ana_fact_total.md  README.md  check.h  main.cpp  main_intel.cpp  main_open.cpp  mm_dss.cpp  mm_mumps.cpp
benchmarks/sparse-solver/analysis/: package.json
benchmarks/sparse-solver/analysis/src/: analyzeData.ts  genHtml.ts  index.ts  readReport.ts
benchmarks/sparse-solver/results/intel/: mumps_Flan_1565_metis_intel_mpi1.json  mumps_Flan_1565_metis_intel_mpi1.txt  mumps_Flan_1565_metis_intel_mpi1_omp1.txt  mumps_Flan_1565_metis_intel_mpi1_omp2.txt  mumps_Flan_1565_metis_intel_mpi2_omp1.json  mumps_Flan_1565_metis_intel_mpi2_omp1.txt  mumps_Flan_1565_metis_intel_mpi2_omp2.txt  mumps_Flan_1565_metis_intel_mpi3.json  mumps_Flan_1565_metis_intel_mpi3.txt  mumps_Flan_1565_metis_intel_mpi3_omp1.json  mumps_Flan_1565_metis_intel_mpi3_omp1.txt  mumps_Flan_1565_metis_intel_mpi4.json  mumps_Flan_1565_metis_intel_mpi4_omp1.json  mumps_Flan_1565_metis_intel_seq.json  mumps_Flan_1565_metis_intel_seq.txt  mumps_Flan_1565_metis_intel_seq_omp1.json  mumps_Flan_1565_metis_intel_seq_omp2.txt  mumps_Flan_1565_metis_intel_seq_omp3.txt  mumps_Flan_1565_metis_intel_seq_omp4.json  mumps_Flan_1565_metis_intel_seq_omp4.txt  mumps_bfwb62_metis_intel_mpi1_omp2.json  mumps_bfwb62_metis_intel_mpi1_omp3.txt  mumps_bfwb62_metis_intel_mpi1_omp4.txt  mumps_bfwb62_metis_intel_mpi2.json  mumps_bfwb62_metis_intel_mpi2.txt  mumps_bfwb62_metis_intel_mpi2_omp1.txt  mumps_bfwb62_metis_intel_mpi2_omp2.json  mumps_bfwb62_metis_intel_mpi4_omp1.json  mumps_bfwb62_metis_intel_seq.json  mumps_bfwb62_metis_intel_seq.txt  mumps_bfwb62_metis_intel_seq_omp2.json  mumps_bfwb62_metis_intel_seq_omp3.json  mumps_bfwb62_metis_intel_seq_omp3.txt  mumps_inline_1_metis_intel_mpi1.json  mumps_inline_1_metis_intel_mpi1.txt  mumps_inline_1_metis_intel_mpi1_omp2.json  mumps_inline_1_metis_intel_mpi1_omp2.txt  mumps_inline_1_metis_intel_mpi1_omp3.json  mumps_inline_1_metis_intel_mpi1_omp4.json  mumps_inline_1_metis_intel_mpi1_omp4.txt  (+50 more)
benchmarks/sparse-solver/results/latest/: README.md  intel_Flan_1565_unknown_omp1.json  intel_Flan_1565_unknown_omp2.json  intel_Flan_1565_unknown_omp3.json  intel_Flan_1565_unknown_omp4.json  intel_Flan_1565_unknown_omp5.json  intel_Flan_1565_unknown_omp6.json  intel_Flan_1565_unknown_omp7.json  intel_Flan_1565_unknown_omp8.json  intel_bfwb62_unknown_omp1.json  intel_bfwb62_unknown_omp2.json  intel_bfwb62_unknown_omp3.json  intel_bfwb62_unknown_omp3.txt  intel_bfwb62_unknown_omp4.json  intel_bfwb62_unknown_omp5.json  intel_bfwb62_unknown_omp6.json  intel_bfwb62_unknown_omp7.json  intel_bfwb62_unknown_omp8.json  intel_inline_1_unknown_omp1.json  intel_inline_1_unknown_omp2.json  intel_inline_1_unknown_omp3.json  intel_inline_1_unknown_omp4.json  intel_inline_1_unknown_omp5.json  intel_inline_1_unknown_omp6.json  intel_inline_1_unknown_omp7.json  intel_inline_1_unknown_omp8.json  intel_pre2_unknown_omp1.json  intel_pre2_unknown_omp2.json  intel_pre2_unknown_omp3.json  intel_pre2_unknown_omp4.json  (+101 more)
src/: README.md  (+2 more)
src/blas/: CMakeLists.txt  README.md  auxiliary.h  conversions.h  double.h  high_level.h  index.h  mkl_double.cpp  mkl_double.h  mkl_wrapper.cpp  mkl_wrapper.h  z_test_conversions.cpp  z_test_double.cpp  z_test_mkl_double.cpp  z_test_mkl_wrapper.cpp  zz_conversions.cpp  zz_double.cpp  zz_high_level.cpp
src/check/: CMakeLists.txt  check.h  check_arrays.h  equal_vectors.h  index.h  z_test_equal_arrays.cpp  z_test_equal_scalars.cpp  z_test_equal_vectors.cpp  zz_equal_scalars.cpp  zz_equal_vectors.cpp
src/mpiaux/: CMakeLists.txt  README.md  index.h  mpiaux.h  z_test_mpi_main.cpp  z_test_mpiaux.cpp  z_test_mpiaux_np4.cpp  zz_mpiaux_no_mpi.cpp  zz_mpiaux_np4.cpp
src/sparse/: CMakeLists.txt  README.md  coo_matrix.cpp  coo_matrix.h  csr_matrix.cpp  csr_matrix.h  index.h  read_matrix.cpp  read_matrix.h  read_matrix_for_mumps.cpp  read_matrix_for_mumps.h  read_matrix_market.cpp  read_matrix_market.h  solver_dss.cpp  solver_dss.h  solver_dss_options.h  solver_mumps.cpp  solver_mumps.h  solver_mumps_constants.h  solver_mumps_options.h  solver_mumps_wrapper.h  solver_pardiso.h  sparse_blas.cpp  sparse_blas.h  sparse_triplet.cpp  sparse_triplet.h  triplet.cpp  triplet.h  triplet_for_mumps.cpp  triplet_for_mumps.h  z_integ_mumps_bfwb62_np1.cpp  z_test_coo_matrix.cpp  z_test_csr_matrix.cpp  z_test_read_matrix.cpp  z_test_read_matrix_for_mumps.cpp  z_test_read_matrix_for_mumps_np2.cpp  z_test_read_matrix_market.cpp  z_test_solver_dss.cpp  z_test_solver_dss_bfwb62.cpp  z_test_solver_intel_dss_example.cpp  (+23 more)
src/util/: CMakeLists.txt  README.md  catch_all.h  constants.h  doctest_mpi.h  extract_arguments.h  formaters.h  get_current_path.h  get_envar.h  get_selfpath.h  index.h  memory_usage.h  nanoseconds_to_string.h  path_tools.h  print_vector.h  sleep.h  stopwatch.h  string_tools.h  wrap_main_function.h  z_test_doctest_main.cpp  z_test_extract_arguments.cpp  z_test_extract_first_default.cpp  z_test_formaters.cpp  z_test_get_envar.cpp  z_test_get_selfpath.cpp  z_test_memory_usage.cpp  z_test_nanoseconds_to_string.cpp  z_test_path_tools.cpp  z_test_stopwatch.cpp  z_test_string_tools.cpp  z_test_util.cpp  zz_extract_arguments.cpp  zz_extract_first_default.cpp  zz_formaters.cpp  zz_get_envar.cpp  zz_path_tools.cpp  zz_stopwatch.cpp  zz_string_tools.cpp
(+829 files in other folders)
